tdf#124032 fix Edit background drawing

IsPaintTransparent() is preventing to paint the background but
not sure why this is needed. removing this condition doesn't
seem to have any ill effects.

Change-Id: I5ac54e208e4f1c9941beb4012aa44182d21dbed9
Reviewed-on: https://gerrit.libreoffice.org/70855
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>